# blipty

./: README.md  VideoPlayerUpgrade.md  Xtream Codes API.md  build-firestick.sh  dev.sh  killit.sh  minimal-tauri-android.sh  opendb.sh  package.json  project_plan.md  quarantine.sh  tsconfig.json  vite.config.ts
android/app/: build.gradle
android_scripts/: bare-minimum-build.sh  build-android-tv.sh  build-android-with-features.sh  build-firestick.sh  check-ndk-paths.sh  direct-build.sh  fix-android-package.sh  fix-cargo-config.sh  fix-dependencies.sh  fix-import.sh  fix-openssl-android.sh  minimal-build.sh  set-ndk.sh  setup-android-env.sh  setup-tv-emulator.sh  tv-remote.sh
docs/: android-tv-guide.md  gstreamer-implementation-plan.md
scripts/: test-on-android-tv.sh
src/: app.css  app.html  commands.rs  main.js  tvNavigation.js  tvNavigation.ts
src-tauri/: Cargo.toml  Cargo.toml.bak  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/api_responses/: get_live_categories.json  get_series_categories.json  get_vod_categories.json
src-tauri/capabilities/: default.json  http.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: channel_commands.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  playlist_commands.rs
src-tauri/src/channel_commands/: category_commands.rs  extract_categories.rs  extract_channels.rs  fetch_api.rs  fetch_api.rs.bak  fetch_data.rs  import_commands.rs  insert_categories.rs  insert_channels.rs  mod.rs  process_m3u.rs
src-tauri/src/db/: migrations.rs  table_creation.rs
src-tauri/src/video_player/: commands.rs  events.rs  mod.rs
src/channel_commands/: fetch_api.rs  fetch_api.rs.bak
src/lib/: commands.svelte.ts  commands.ts  index.ts  stores.ts
src/lib/components/: app-sidebar.svelte  channel-list.svelte  playlist-edit-form.svelte  playlist-form.svelte  video-player.svelte
src/lib/components/ui/accordion/: accordion-trigger.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-title.svelte  dialog.svelte  index.ts
src/lib/components/ui/sidebar/: constants.ts
src/lib/components/ui/slider/: index.ts  slider.svelte
src/lib/components/video/controls/: index.ts  keyboard-controls.ts  platform-styles.svelte  quality-selector.svelte  shortcut-help.svelte  video-controls.svelte
src/lib/hooks/: click-outside.ts
src/lib/utils/: platform.ts  tv-focus.ts
src/lib/video/: index.ts  service.ts  store.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: tv.css
types/: global.d.ts
web-test/: package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
web-test/.svelte-kit/: ambient.d.ts
web-test/src/: App.svelte  app.css
web-test/src/components/: DatabaseTest.svelte  SqlQuery.svelte
web-test/src/lib/: db.ts  initSQLite.ts  stores.ts
web-test/src/lib/components/ui/accordion/: accordion-content.svelte  accordion-trigger.svelte
web-test/src/lib/components/ui/button/: button.svelte
web-test/src/lib/components/ui/card/: card-content.svelte  (+5 more)
web-test/src/lib/services/: db-service.ts
web-test/src/routes/: +page.svelte
web-test/src/types/: wa-sqlite.d.ts
web-test/web-test/: package-lock.json  package.json
(+5 files in other folders)
