[package]
name = "app"
version = "1.0.0"
description = "A Tauri application"
authors = ["Mark"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0"
chrono = "0.4"
log = "0.4"
simple_logger = "4.2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "sync"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
