[package]
name = "blipty"
version = "1.0.0"
description = "Blipty IPTV App"
authors = ["Mark Bussinger"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[package.metadata.bundle]
identifier = "net.blipty.app"

[lib]
name = "blipty"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.12", features = [] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
reqwest = { version = "0.11.22", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1.35.0", features = ["full"] }
chrono = "0.4"
thiserror = "1.0"
url = "2.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Prevents additional console window on Windows in release, DO NOT REMOVE!!
[target.'cfg(windows)'.dependencies]
webview2-com = "0.19.1"
