[package]
name = "blipty"
version = "1.0.0"
description = "A Tauri application"
authors = ["Mark"]
license = ""
repository = ""
edition = "2021"

[package.metadata.bundle]
identifier = "net.blipty.app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0"
log = "0.4"
simple_logger = "4.2"
tokio = { version = "1.36", features = ["rt-multi-thread", "sync"] }

# Fix chrono dependency for Android
chrono = "0.4"

# Fix reqwest dependency for Android
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Keep URL dependency which has no OpenSSL issues
url = "2.5.0"
dirs = "6.0.0"

# Add a native-tls feature flag for conditional compilation
[features]
custom-protocol = ["tauri/custom-protocol"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
